--- a/src/main/resources/assets/broken_smp_god_shards/lang/en_us.json
+++ b/src/main/resources/assets/broken_smp_god_shards/lang/en_us.json
@@ -94,6 +94,7 @@
   "gui.broken_smp_god_shards.between_anvil.button_scrapify": "scrapify",
   "item.broken_smp_god_shards.turret": "Turret Reamote",
   "item.broken_smp_god_shards.scraptrap_spawn_egg": "Junk Trap Spawn Egg",
+  "item.broken_smp_god_shards.speedbubblemush": "Speed bubble mush",
   "item.broken_smp_god_shards.grappel": "Grappling Hook Glove",
   "item_group.broken_smp_god_shards.brokenworld": "Broken World",
   "subtitles.pic609": "",
@@ -119,6 +120,7 @@
   "gui.broken_smp_god_shards.between_anvil.label_scrap_maker": "Scrap Maker ",
   "item.minecraft.potion.effect.butchersrage": "Potion of Butchers Rage",
   "gui.broken_smp_god_shards.adminpc.label_night": "night",
+  "block.broken_smp_god_shards.speed_flower": "Speed bubble flower",
   "block.broken_smp_god_shards.eyecore": "Eyecore",
   "entity.broken_smp_god_shards.golemspawn": " Golem",
   "subtitles.pill": "",
